--- a/abuys project/pubspec.yaml
+++ b/abuys project/pubspec.yaml
@@ -37,8 +37,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   percent_indicator: ^3.4.0
-  image_picker: ^0.8.4+4
+  image_picker: ^0.8.3+1
   path_provider: ^2.0.8
+  flutter_bloc: ^8.0.1
+  telephony: ^0.2.0
+  flutter_verification_code: ^1.1.6
 
 dev_dependencies:
   flutter_test:
@@ -86,6 +89,8 @@ flutter:
     - assets/Ellipse 16.png
     - assets/Ellipse 17.png
     - assets/Ellipse 18.png
+    - assets/Group 51.png
+    - assets/Vector 1.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
